Fix page title wrapping on mobile

--- a/theme/scss/custom.scss
+++ b/theme/scss/custom.scss
@@ -209,7 +209,6 @@ header {
 
     h1 {
         font-weight: 600;
-        white-space: nowrap;
 
         margin-left: -0.35em;
         margin-bottom: -0.1em;
